add basic components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag 'bundle/app' %>
   <%= csrf_meta_tags %>
 </head>
-<body class='container-fluid'>
+<body className='container'>
 
 <%= yield %>
 
