--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,3 +23,14 @@
 .wild-card-choices {
   margin-top: 20px;
 }
+
+.input-container {
+  width: 400px;
+  margin-top: 20px;
+}
+
+.scoreboard-container {
+  width: 400px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
