--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,6 +32,7 @@
   background-color: #1da1f2;
   text-transform: uppercase;
   border-color: gray;
+  margin-bottom: 10px;
 
   &:hover, &:active, &:focus {
     color: white;
